--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </font>
         <br>
         <a href="https://purebeast46.github.io/ref/"> Referral Links </a>
+<a href="https://pirates-chat-d8e00.web.app/">Pirate's Chat</a>
 
         </center>
 
