--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             </font>
         <br>
-        <a href="https://purebeast46.github.io/ref/"> Referral Links </a>
+        <!-- <a href="https://purebeast46.github.io/ref/"> Referral Links </a> -->
 <br>
 <a href="https://pirates-chat-d8e00.web.app/">Pirate's Chat</a>
 
