--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             Pirate Nahid
 
         </title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">  
     </head>
