--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
 
             </font>
         <br>
+            </center>
         <!-- <a href="https://purebeast46.github.io/ref/"> Referral Links </a> -->
 <br>
+<font
+  >
 <a href="https://pirates-chat-d8e00.web.app/">Pirate's Chat</a>
+<br>
 
-        </center>
+
+<a href="https://files.piratenahid.workers.dev">Pirate's Drive</a>
+</font>
+
+        
 
         </div>
         
