--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             
             <font>
-                Hi, this is Pirate Nahid.
+                Welcome to Pirate's Server.
 
 
             </font>
@@ -30,7 +30,15 @@
 
 
 <a href="https://files.piratenahid.workers.dev">Pirate's Drive</a>
+<br>
+
+
+
+<a href="/font/index.html">Pirate's Font</a>
 </font>
+
+
+
 
         
 
