--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
             Pirate Nahid
 
         </title>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="http://purebeast46.github.io/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">  
+        <link rel="shortcut icon" href="http://purebeast46.github.io/favicon.ico" type="image/x-icon">  
     </head>
     <body bgcolor="#000">
         <meta name="viewport" content="width=device-width, user-scalable=no">
