--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="menu">
           <div class="top-nav">
             <div class="logo">
-              <h1>Nahid <span>j</span>eet</h1>
+              <h1>Nahid <span>H</span>asan</h1>
             </div>
 
             <div class="close">
