--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <!-- Teams -->
   <section class="section theme" id="teams">
     <div class="title">
-      <h1>My teams</h1>
+      <h1>My crew</h1>
     </div>
 
     <div class="teams-center container">
@@ -239,7 +239,7 @@
                   <img src="./images/profile1.jpg" alt="" />
                 </div>
 
-                <h3>Someone's name</h3>
+                <h3>Shahrier Wahid</h3>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Doloremque, a.
@@ -252,7 +252,7 @@
                   <img src="./images/profile2.jpg" alt="" />
                 </div>
 
-                <h3>Someone's name</h3>
+                <h3>Rifaz Farhan</h3>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Doloremque, a.
@@ -265,7 +265,7 @@
                   <img src="./images/profile3.jpg" alt="" />
                 </div>
 
-                <h3>Someone's name</h3>
+                <h3>Jack Sparrow</h3>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Doloremque, a.
