--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       <div class="service" data-aos="fade-up" data-aos-duration="1500">
         <span><i class="fas fa-chart-line"></i></span>
-        <h2>Web Design</h2>
+        <h2>Android Development</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, amet
           iste assumenda nostrum accusamus aliquid totam sit ab similique
@@ -155,7 +155,7 @@
       </div>
       <div class="service" data-aos="fade-left" data-aos-duration="1500">
         <span><i class="fas fa-blender-phone"></i></span>
-        <h2>Web Design</h2>
+        <h2>Wasting Time</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, amet
           iste assumenda nostrum accusamus aliquid totam sit ab similique
@@ -177,46 +177,43 @@
           <h4>HTML</h4>
           <div class="skills-ilt">
             <div class="skills-bar html"></div>
-            <span>95%</span>
+            <span>5%</span>
           </div>
         </div>
         <div class="skills-box">
           <h4>CSS</h4>
           <div class="skills-ilt">
             <div class="skills-bar css"></div>
-            <span>90%</span>
+            <span>0%</span>
           </div>
         </div>
         <div class="skills-box">
           <h4>JAVASCRIPT</h4>
           <div class="skills-ilt">
             <div class="skills-bar javascript"></div>
-            <span>75%</span>
+            <span>5%</span>
           </div>
         </div>
         <div class="skills-box">
           <h4>NODEJS</h4>
           <div class="skills-ilt">
             <div class="skills-bar nodejs"></div>
-            <span>86%</span>
+            <span>6%</span>
           </div>
         </div>
         <div class="skills-box">
-          <h4>MONGODB</h4>
+          <h4>Python</h4>
           <div class="skills-ilt">
             <div class="skills-bar mongodb"></div>
-            <span>95%</span>
+            <span>5%</span>
           </div>
         </div>
       </div>
 
       <div class="right">
-        <h3>My Creative skills and experience</h3>
+        <h3>My skills and experience</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-          sapiente blanditiis ipsa iusto commodi, fuga repudiandae, ducimus
-          hic magni ratione earum eius similique quia quod dicta maiores et
-          delectus ea numquam ullam vitae. Suscipit, vitae!
+          I am a nobody from nowhere with no experience.
         </p>
         <a href="" class="btn">Read more</a>
       </div>
@@ -339,15 +336,14 @@
       </div>
       <div class="blog-box">
         <div class="image-container">
-          <img src="./images/blog-3.jpg" alt="" />
+          <img src="./images/sage.gif" alt="" />
         </div>
         <div class="content">
-          <h4>Make your Marketing website</h4>
+          <h4>Project Sage</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde,
-            vitae!
+            You can talk with her.
           </p>
-          <a href="">Read More</a>
+          <a href="https://purebeast46.github.io/Sage">Read More</a>
         </div>
       </div>
     </div>
